tests/error/negative_array.gw
#! [contains] NegativeArraySize: while allocating arrays
var int i[-1];
<<< i >>>;
